Avoid Bug #28363 by not seeking if we don't have a read buffer